<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="horizontal"
    android:background="@drawable/border">
    <ImageView
        android:id="@+id/ivRestauranteMin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:id="@+id/textViewNomeRestaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="nome"
            android:textSize="15dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textViewEnderecoRestaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="endereco"
            android:textSize="13dp"/>

    </LinearLayout>
</LinearLayout>